--- a/src/filter/hueshift0r/CMakeLists.txt
+++ b/src/filter/hueshift0r/CMakeLists.txt
@@ -2,12 +2,13 @@ set (SOURCES hueshift0r.c matrix.h)
 set (TARGET hueshift0r)
 
 if (MSVC)
-  set_source_files_properties (hueshift0r.c PROPERTIES LANGUAGE CXX)
   set (SOURCES ${SOURCES} ${FREI0R_DEF})
 endif (MSVC)
 
-link_libraries(m)
 add_library (${TARGET}  MODULE ${SOURCES})
 set_target_properties (${TARGET} PROPERTIES PREFIX "")
+if(MATH_FOUND)
+	target_link_libraries(${TARGET} ${MATH_LIBRARY})
+endif()
 
 install (TARGETS ${TARGET} LIBRARY DESTINATION ${LIBDIR})
