--- a/src/generator/test_pat/CMakeLists.txt
+++ b/src/generator/test_pat/CMakeLists.txt
@@ -6,7 +6,6 @@ set (L_SOURCES test_pat_L.c)
 set (R_SOURCES test_pat_R.c)
 
 if (MSVC)
-  set_source_files_properties (test_pat_B.c test_pat_C.c test_pat_G.c test_pat_I.c test_pat_L.c test_pat_R.c PROPERTIES LANGUAGE CXX)
   set (B_SOURCES ${B_SOURCES} ${FREI0R_DEF})
   set (C_SOURCES ${C_SOURCES} ${FREI0R_DEF})
   set (G_SOURCES ${G_SOURCES} ${FREI0R_DEF})
@@ -15,13 +14,21 @@ if (MSVC)
   set (R_SOURCES ${R_SOURCES} ${FREI0R_DEF})
 endif (MSVC)
 
-link_libraries(m)
 add_library (test_pat_B MODULE ${B_SOURCES})
 add_library (test_pat_C MODULE ${C_SOURCES})
 add_library (test_pat_G MODULE ${G_SOURCES})
 add_library (test_pat_I MODULE ${I_SOURCES})
 add_library (test_pat_L MODULE ${L_SOURCES})
 add_library (test_pat_R MODULE ${R_SOURCES})
+
+if(MATH_FOUND)
+	target_link_libraries(test_pat_B ${MATH_LIBRARY})
+	target_link_libraries(test_pat_C ${MATH_LIBRARY})
+	target_link_libraries(test_pat_G ${MATH_LIBRARY})
+	target_link_libraries(test_pat_I ${MATH_LIBRARY})
+	target_link_libraries(test_pat_L ${MATH_LIBRARY})
+	target_link_libraries(test_pat_R ${MATH_LIBRARY})
+endif()
 
 set_target_properties (test_pat_B PROPERTIES PREFIX "")
 set_target_properties (test_pat_C PROPERTIES PREFIX "")
