--- a/src/filter/blur/CMakeLists.txt
+++ b/src/filter/blur/CMakeLists.txt
@@ -1,13 +1,10 @@
 set (SOURCES IIRblur.c fibe.h)
 set (TARGET IIRblur)
 
-if (MSVC)
-  set_source_files_properties (IIRblur.c PROPERTIES LANGUAGE CXX)
-  set (SOURCES ${SOURCES} ${FREI0R_DEF})
-endif (MSVC)
-
-link_libraries(m)
 add_library (${TARGET}  MODULE ${SOURCES})
+if(MATH_LIBRARY)
+	target_link_libraries(${TARGET} ${MATH_LIBRARY})
+endif()
 set_target_properties (${TARGET} PROPERTIES PREFIX "")
 
 install (TARGETS ${TARGET} LIBRARY DESTINATION ${LIBDIR})
