--- a/src/filter/coloradj/CMakeLists.txt
+++ b/src/filter/coloradj/CMakeLists.txt
@@ -2,12 +2,13 @@ set (SOURCES coloradj_RGB.c)
 set (TARGET coloradj_RGB)
 
 if (MSVC)
-  set_source_files_properties (coloradj_RGB.c PROPERTIES LANGUAGE CXX)
   set (SOURCES ${SOURCES} ${FREI0R_DEF})
 endif (MSVC)
 
-link_libraries(m)
 add_library (${TARGET} MODULE ${SOURCES})
+if(MATH_LIBRARY)
+	target_link_libraries(${TARGET} ${MATH_LIBRARY})
+endif()
 set_target_properties (${TARGET} PROPERTIES PREFIX "")
 
 install (TARGETS ${TARGET} LIBRARY DESTINATION ${LIBDIR})
