--- a/src/filter/defish0r/CMakeLists.txt
+++ b/src/filter/defish0r/CMakeLists.txt
@@ -2,12 +2,13 @@ set (SOURCES defish0r.c interp.h)
 set (TARGET defish0r)
 
 if (MSVC)
-  set_source_files_properties (defish0r.c PROPERTIES LANGUAGE CXX)
   set (SOURCES ${SOURCES} ${FREI0R_DEF})
 endif (MSVC)
 
-link_libraries(m)
 add_library (${TARGET}  MODULE ${SOURCES})
+if(MATH_LIBRARY)
+	target_link_libraries(${TARGET} ${MATH_LIBRARY})
+endif()
 set_target_properties (${TARGET} PROPERTIES PREFIX "")
 
 install (TARGETS ${TARGET} LIBRARY DESTINATION ${LIBDIR})
