--- a/src/filter/gamma/CMakeLists.txt
+++ b/src/filter/gamma/CMakeLists.txt
@@ -2,12 +2,12 @@ set (SOURCES gamma.c)
 set (TARGET gamma)
 
 if (MSVC)
-  set_source_files_properties (gamma.c PROPERTIES LANGUAGE CXX)
   set (SOURCES ${SOURCES} ${FREI0R_DEF})
 endif (MSVC)
 
-link_libraries(m)
 add_library (${TARGET}  MODULE ${SOURCES})
 set_target_properties (${TARGET} PROPERTIES PREFIX "")
-
+if(MATH_FOUND)
+	target_link_libraries(${TARGET} ${MATH_LIBRARY})
+endif()
 install (TARGETS ${TARGET} LIBRARY DESTINATION ${LIBDIR})
