Fix check_function_exists calls in math

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,9 +19,9 @@ find_path(MATH_INCLUDE_DIR math.h)
 set(MATH_NAMES ${MATH_NAMES} m)
 find_library(MATH_LIBRARY NAMES ${MATH_NAMES})
 find_package_handle_standard_args(MATH DEFAULT_MSG MATH_LIBRARY MATH_INCLUDE_DIR)
-IF(MATH_FOUND)
+if(MATH_FOUND)
   link_libraries(${MATH_LIBRARY})
-ENDIF(MATH_FOUND)
+endif(MATH_FOUND)
 #
 # Look for working infinity
 #
@@ -51,12 +51,18 @@ endif()
 #
 # Look for roundf, rint, lrint
 #
-SET(CMAKE_EXTRA_INCLUDE_FILES "math.h")
+set(CMAKE_REQUIRED_LIBRARIES_BACKUP ${CMAKE_REQUIRED_LIBRARIES})
+set(CMAKE_EXTRA_INCLUDE_FILES_BACKUP ${CMAKE_EXTRA_INCLUDE_FILES})
+if(MATH_FOUND)
+  list(APPEND CMAKE_REQUIRED_LIBRARIES ${MATH_LIBRARY})
+endif()
+set(CMAKE_EXTRA_INCLUDE_FILES "math.h")
 check_function_exists(roundf HAVE_ROUNDF)
 check_function_exists(rint HAVE_RINT)
 check_function_exists(lrint HAVE_LRINT)
 check_function_exists(lrintf HAVE_LRINTF)
-SET(CMAKE_EXTRA_INCLUDE_FILES)
+set(CMAKE_REQUIRED_LIBRARIES ${CMAKE_REQUIRED_LIBRARIES_BACKUP})
+set(CMAKE_EXTRA_INCLUDE_FILES ${CMAKE_EXTRA_INCLUDE_FILES_BACKUP})
 if(HAVE_ROUNDF)
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DHAVE_ROUNDF")
 	set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -DHAVE_ROUNDF")
