Repair frei0r.pc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,5 +47,6 @@ set (prefix "${CMAKE_INSTALL_PREFIX}")
 set (exec_prefix "${CMAKE_INSTALL_PREFIX}")
 set (libdir "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}")
 set (includedir "${CMAKE_INSTALL_PREFIX}/include")
+set (VERSION ${PROJECT_VERSION})
 configure_file ("frei0r.pc.in" "frei0r.pc" @ONLY)
 install (FILES "${CMAKE_CURRENT_BINARY_DIR}/frei0r.pc" DESTINATION "${CMAKE_INSTALL_LIBDIR}/pkgconfig")
