CMakeLists.txt: Remove test on -Wl,--as-needed that has never been propagated, fix CMAKE_CXX_FLAGS

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,16 +1,7 @@
-include(CheckLinkerFlag)
 include(FindPackageHandleStandardArgs)
 include(CheckFunctionExists)
 include(CheckCSourceCompiles)
 include(CheckCXXSourceCompiles)
-#
-# Linker flag to avoid references to unneeded symbols
-#
-set(WL_AS_NEEDED "-Wl,--as-needed")
-check_linker_flag(C ${WL_AS_NEEDED} LINKER_HAS_WL_AS_NEEDED)
-if(LINKER_HAS_WL_AS_NEEDED)
-  set(CMAKE_SHARED_LINKER_FLAGS ${WL_AS_NEEDED})
-endif()
 #
 # Math library, e.g. -lm on UNIX, nothing on Windows
 #
@@ -30,14 +21,14 @@ try_compile(C_HAS_INFINITY ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DI
 if(C_HAS_INFINITY)
 	message(STATUS "Looking for working INFINITY - found")
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DHAVE_C_INFINITY")
-	set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -DHAVE_C_INFINITY")
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DHAVE_C_INFINITY")
 else()
 	message(STATUS "Looking for INFINITY replacement")
 	try_compile(C_HAS_INFINITY ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/infinity.c COMPILE_DEFINITIONS -DHAVE_INFINITY_REPLACEMENT=1)
 	if(C_HAS_INFINITY_REPLACEMENT)
 		message(STATUS "Looking for INFINITY replacement - found")
 		set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DHAVE_C_INFINITY_REPLACEMENT")
-		set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -DHAVE_C_INFINITY_REPLACEMENT")
+		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DHAVE_C_INFINITY_REPLACEMENT")
 	else()
 		message(STATUS "Looking for INFINITY replacement using division")
 		try_run(C_INFINITY_RUN_RESULT C_INFINITY_COMPILE_RESULT ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/infinity.c COMPILE_DEFINITIONS -DHAVE_INFINITY_REPLACEMENT_USING_DIVISION=1)
@@ -65,19 +56,19 @@ set(CMAKE_REQUIRED_LIBRARIES ${CMAKE_REQUIRED_LIBRARIES_BACKUP})
 set(CMAKE_EXTRA_INCLUDE_FILES ${CMAKE_EXTRA_INCLUDE_FILES_BACKUP})
 if(HAVE_ROUNDF)
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DHAVE_ROUNDF")
-	set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -DHAVE_ROUNDF")
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DHAVE_ROUNDF")
 endif()
 if(HAVE_RINT)
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DHAVE_RINT")
-	set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -DHAVE_RINT")
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DHAVE_RINT")
 endif()
 if(HAVE_LRINT)
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DHAVE_LRINT")
-	set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -DHAVE_LRINT")
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DHAVE_LRINT")
 endif()
 if(HAVE_LRINTF)
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DHAVE_LRINTF")
-	set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -DHAVE_LRINTF")
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DHAVE_LRINTF")
 endif()
 #
 # Check that C/CXX compilers supports VLA
@@ -88,14 +79,14 @@ if (C_SUPPORT_VLA)
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DSUPPORT_VLA")
 endif()
 if (CXX_SUPPORT_VLA)
-	set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -DSUPPORT_VLA")
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DSUPPORT_VLA")
 endif()
 #
 # Set defines specific to cl
 #
 if(MSVC)
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D_CRT_SECURE_NO_WARNINGS")
-	set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -D_CRT_SECURE_NO_WARNINGS")
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_CRT_SECURE_NO_WARNINGS -D_SCL_SECURE_NO_WARNINGS")
 endif()
 
 add_subdirectory (filter)
